  behavior is the same as before.

DEPRECATED:

REMOVED:

* Removed jQuery, Bootstrap, and SweetAlert2 (replaced with our own JS/CSS).

* Removed cs_util/process_theme and removed dependence on outside fonts.

FIXED:

* Fixed an issue with error reporting when trying to log a tuple that contains
  an element that can't be logged.

SECURITY:

* Prevent submissions from being able to access materials defined in
  csq_code_pre from pythoncode questions.

DOCUMENTATION:


##################
# Version 12.1.1 #
##################

FIXED:

* Fixed an issue with unintentional "broadcasting" of numpy arrays in certain
  'expression' questions.

* Fixed an issue that prevented datetime and timedelta objects from being
  logged.


##################
# Version 12.1.0 #
##################

ADDED:

* Added questions' types and grading modes to the 'question_info' cache.

* datetime and timedelta objects (from the datetime module) are now
  allowed in log entries.

CHANGED:

* The automatic source code download no longer saves cached copies, to avoid
  accidentally filling small disks.

* Upgraded KaTeX to version 0.9.0.

* Upgraded SweetAlert2 to version 7.15.1.

* Upgraded MathJax to version 2.7.3.

* Upgraded PLY to version 3.11.

REMOVED:

* 'questions' is no longer a valid key for tutor.compute_page_stats, as it is
  redundant with 'question_info'.

FIXED:

* Fixed an issue where invalid question names were failing silently.

* Prevented scroll bars from showing up in the CAT-SOOP logo at the bottom of
  the page.

* The 'question_info' cache is now checked/updated after the pre_handle plugin
  is executed, rather than after.

* 'expression' questions now support implicit multiplication by j (the
  imaginary unit).

* Fixed an issue that caused scores in the 'problemstate' log to be overwritten
  with None when the "check" button was used.

* Entering an empty expression and entering an invalid expression to a
  'pythonic' question now produce the same error message.
